--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <meta charset="utf-8" />
 <title>สว.67 LINE</title>
 <meta name="description" content="หน้าค้นหากลุ่ม LINE แยกพื้นที่เพื่ออำนวยความสะดวกให้ผู้สมัครสว.มีช่องทางติดต่อกับผู้สมัครท่านอื่นในพื้นที่เดียวกันได้" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <script src="https://jsuites.net/v4/jsuites.js"></script>
 <link rel="stylesheet" href="https://jsuites.net/v4/jsuites.css" type="text/css" />
-
 <link href="main.css?v=0.0.1" rel="stylesheet" />
 
 </head>
