--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 พระนครศรีอยุธยา, พัทลุง, เพชรบุรี, มหาสารคาม, มุกดาหาร, ยโสธร, ร้อยเอ็ด, ราชบุรี, ลพบุรี, ลำพูน,
 เลย, ศรีสะเกษ, สกลนคร, สงขลา, สตูล, สมุทรปราการ, สมุทรสาคร, สุรินทร์, อ่างทอง, อำนาจเจริญ
     </p>
-    <p>ซึ่งครอบคลุมจำนวนผู้สมัครสว.เกินกว่าครึ่งหนึ่ง ทางผู้พัฒนาจะทำการเพิ่มกลุ่มอำเภอจบครบทั้งประเทศให้เร็วที่สุด โดยจะอัพเดทว่าจังหวัดไหนมีกลุ่ม LINE แล้วในหน้านี้ต่อไป</p>
+    <p>ซึ่งครอบคลุมกว่า 70% ของผู้สมัครสว.ทั้งหมด ทางผู้พัฒนาจะทำการเพิ่มกลุ่มอำเภอจบครบทั้งประเทศให้เร็วที่สุด โดยจะอัพเดทว่าจังหวัดไหนมีกลุ่ม LINE แล้วในหน้านี้ต่อไป</p>
   </footer>
 </main>
 
